 ! UnitDestroyed is now called twice and gets an extra argument 'preEvent'
   the value of preEvent is true for the first call which corresponds to
   the old UnitDestroyed and false for the second (allows shaders during
   death anims, etc; after the second call a unitID is no longer valid!)
   also remove hardcoded logic to zombify (stun+immobilize) a unit on death

 ! gl.UnitShape and gl.FeatureShape now take three extra boolean arguments
   and set their relevant GL state internally (so that calling only these
   functions is enough to get correctly rendered models; pass in 'false'
   for the [new] THIRD argument to get the fixed behavior, omit it or pass
   in 'true' [default] to render with your own custom state instead)

   NOTE:
     the [new] FOURTH argument should be 'true' if in DrawScreen and 'false'
     (default) if in DrawWorld; any transforms for these two functions *MUST*
     include a gl.LoadIdentity call when argument #3 is false (whether they
     are used in DrawWorld or in DrawScreen)
     the [new] FIFTH argument determines whether the model is drawn opaque
     ('true' [default]) or with translucency ('false'); only has an effect
     when argument #3 is false

 - add callouts
     gl.{Unit,Feature}Textures(number objID, boolean enable) -> nil
     gl.{Unit,Feature}ShapeTextures(number defID, boolean enable) -> nil
   these are primarily intended to be used in conjunction with
     gl.{Unit,Feature}(objID, ..., raw=true)
     gl.{Unit,Feature}Shape(defID, ..., raw=true)
   and apply a model's default textures; easier than gl.Texture("$%...")

 - new Spring.GetUICommands function to obtain a list of all UI commands (e.g. /luaui reload)
 - new VFS.CalculateHash function that calculates hash (in base64 form) of a given string (with md5 support initially)
 - new Spring.SetFeatureFade(featureID, bool) to control whether a feature will fade or not when zoomed out.